Fix spacing with icons in the list field picker

--- a/assets/css/scss/admin-tooltips.scss
+++ b/assets/css/scss/admin-tooltips.scss
@@ -98,7 +98,7 @@ body .ui-tooltip {
 	}
 
 	div[role=listbox] {
-		padding: 16px;
+		padding: 8px;
 		display: flex;
 		flex-flow: row wrap;
 		justify-content: space-around;
@@ -187,7 +187,7 @@ body .ui-tooltip {
 			width: 100%;
 			min-height: 36px;
 			font-size: 13px;
-			padding: 8px 12px 6px 38px;
+			padding: 8px 12px 6px (36px + 12px);
 			margin: 0;
 			line-height: 24px;
 			* {
